// A typical Protobuf definition for the Grid processing
syntax = "proto3";
 
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "Common/Common.proto";

option csharp_namespace = "gRPCsample.Shared";
 
package testdatapackage;

// The service with the get and update methods 
service TestDataService {
    rpc GetTestData (DataSourceProtoRequest) returns (DataListResponse);
    rpc UpdateDataRecord (UpdateDataRequest) returns (ResultResponse);
}

message UpdateDataRequest {   
    TestDataModel project = 1;
    UpdateTypeModel update_type = 2;
}

// The data for the Grid
message TestDataListModel {
    repeated TestDataModel records  = 1;
}

message TestDataModel {
    int64 id = 1;
    int32 column_int32 = 2;
    double column_double = 3;
    float column_float = 4;
    bool column_bool = 5;
    string column_string = 6;
    bytes column_bytes = 7;
    TestObjectModel column_test_object = 8;
    google.protobuf.Timestamp modified_ts = 9;
    google.protobuf.Timestamp created_ts = 10;
}

// An example of a nested object
message TestObjectModel {   
    int64 Id = 1;
    string Description = 2;
}
